# MyBooks

./: .gitignore  README.md
ai/: README.md
ai/ai/python_ai_programming/: pyproject.toml
ai/deep-learning-from-scratch-6/: README.md  book-repo
ai/natual_language_ai/: .gitignore  encode_swe.py  pyproject.toml  wiki_copy.py
app/: README.md
bc/: README.md
bigdata/: README.md
database/: README.md
design/: README.md
game/: README.md
hardware/rpi/: README.md
infra/: README.md
infra/k8s/: README.md
infra/kubernetes-the-hard-way/: .gitignore  03-compute-resources.sh  04-certificat-authority.sh  04-cleanup.sh  05-k8s-config-file-for-auth  05-k8s-config-file-for-auth.sh  06-data-encryption-keys.sh  07-check-etcd.sh  07-configure-etcd.sh  07-run.sh  07-start-etcd.sh  08-k8s-frontend-lb.sh  08-rbac-for-auth.sh  08-run.sh  08-setup-controller.sh  08-setup-health-check.sh  08-start-controller.sh  09-setup-worker.sh  14-cleanup.sh  cleanup.sh
javascript/rbg/: 01.04.hello.html  02.14.html
lang/: README.md
lang/c/: README.md
lang/clojure/: README.md
lang/cs/: README.md
lang/elixir/: README.md
lang/erlang/: README.md
lang/golang/: README.md
lang/haskell/: README.md
lang/java/: README.md
lang/javascript/: README.md
lang/lisp/: README.md
lang/python/: README.md
lang/ruby/: README.md
lang/rust/: README.md
lang/rust/rust_hands_on/ch06-1/: Cargo.toml
lang/rust/rust_hands_on/ch06-1/src/: main.rs
lisp/: swank.sh
ml/: README.md
os/: README.md
test/: README.md
tools/: README.md
web3/: README.md
webapp/: README.md
(+607 files in other folders)
